2006-03-04  Assaf Gordon  <agordon88@gmail.com>

	* src/libgviewer:
        Reworked internal viewer plus new features:
        external tools and EXIF/IPTC tags viewer

2006-03-04  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-options-dialog.c:
        Fix typo.

	* doc/internal_viewer_hacking.txt:
        Added new file

	* tests/gviewer/*:
        Added tests for libgviewer

2006-02-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-options-dialog.c:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-file-list.c:
        Prettifying code ;o)

2006-02-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/imageloader.{c,h}:
        Added desktop pixmap.

	* pixmaps/:
	* pixmaps/device-icons:
        New and updated icons.

	* */*.{c,h}:
        Code cleanup.

	* gnome-cmd-file-list.h:
	* gnome-cmd-file-list.c:
	* gnome-cmd-data.c:
	* gnome-cmd-main-win.c:
	* gnome-cmd-data.h :
	* gnome-cmd-file-selector.h:
        One step closer towards 'Custom Columns'. Changed col sorting direction when selecting
        (now sets to default col sort direction)


2006-02-26  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-con-device.c:
	* src/gnome-cmd-con-device.h:
	* src/gnome-cmd-data.c:
        Added monitoring of mounted volumes.

2006-02-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-options-dialog.c:
	* src/gnome-cmd-types.h:
        Added new color scheme - Fusion

2006-02-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-internal-viewer.c:
        i18n

2006-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/main.c:
	* data/gnome-commander.1:
        Renamed options for start {left,right} pane dir

2006-02-13  Magnus Stålnacke  <jemamo@telia.com>

	* doc/create_archive.png:
	* doc/extract_archive.png:
        Updated doc files

2006-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* Makefile.am:
	* data/gnome-commander.desktop.in.in:
	* data/gnome-commander.ebuild:
	* data/gnome-commander.spec.in:
	* data/Makefile.am: